--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: junitconfiguration
+version: 0.0.1
 author: Lukas Renggli <renggli@gmail.com>
 description: A test configuration producing JUnit compatible output.
 dependencies:
-  unittest: any
-  meta: any
+  unittest: '>=0.3.1+1'
 
 #dependencies:
 #  unittest: any
