--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: junitconfiguration
-version: 0.0.1
+version: 0.0.2
 author: Lukas Renggli <renggli@gmail.com>
 description: A test configuration producing JUnit compatible output.
+homepage: https://github.com/renggli/JUnitConfigurationDart
 dependencies:
   unittest: '>=0.3.1+1'
 
