--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,7 @@
 name: junitconfiguration
-version: 0.0.3+m4
+version: 0.4.4
 author: Lukas Renggli <renggli@gmail.com>
 description: A test configuration producing JUnit compatible output.
 homepage: https://github.com/renggli/JUnitConfigurationDart
 dependencies:
-  unittest: '>=0.4.0'
-
-#dependencies:
-#  unittest: any
+  unittest: '>=0.4.4'
