--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: junitconfiguration
-version: 0.5.1
+version: 0.5.2
 author: Lukas Renggli <renggli@gmail.com>
 description: A test configuration producing JUnit compatible output.
 homepage: https://github.com/renggli/JUnitConfigurationDart
 dependencies:
+  meta: '>=0.5.0'
   unittest: '>=0.5.0'
