updated unittest dependency version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: junitconfiguration
-version: 1.0.0
+version: 1.0.1-dev
 author: Lukas Renggli <renggli@gmail.com>
 description: A test configuration producing JUnit compatible output.
 homepage: https://github.com/renggli/JUnitConfigurationDart
 environment:
-  sdk: '>=0.8.10+6 <2.0.0'
+  sdk: '>=1.0.0 <2.0.0'
 dependencies:
-  unittest: '>=0.9.0 <0.10.0'
+  unittest: '>=0.9.0 <0.11.0'
